The npm "request" package used to make requests to the observers has been deprecated. We will replace it with the "node-fetch" package in future implementations.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/mu-semtech/delta-notifier#readme",
   "dependencies": {
+    "node-fetch": "^2.6.1",
     "request": "^2.88.0"
   }
 }
