--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   },
   "homepage": "https://github.com/mu-semtech/delta-notifier#readme",
   "dependencies": {
-    "node-fetch": "^2.6.1",
-    "request": "^2.88.0"
+    "node-fetch": "^2.6.1"
   }
 }
